--- a/crates/fastzip-core/Cargo.toml
+++ b/crates/fastzip-core/Cargo.toml
@@ -14,8 +14,10 @@ flate2 = "1.0"
 xz2 = "0.1"
 bzip2 = "0.4"
 zstd = "0.13"
+unrar = { version = "0.5", optional = true }
 
 # 工具
+walkdir = "2"
 thiserror = "2"
 anyhow = "1"
 tracing = "0.1"
@@ -27,4 +29,4 @@ zip = "2"
 
 [features]
 default = []
-full = []  # 预留：RAR 等全格式
+full = ["unrar"]  # RAR、CAB、ISO 等（unrar 用于 .rar）
