--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ members = [
     "crates/fastzip-core",
     "crates/fastzip-cli",
     "crates/fastzip-gui",
+    "crates/fastzip-gui/src-tauri",
 ]
