chore: 更新GUI依赖配置
添加wasm-bindgen-futures、serde、web-sys等依赖

修复Tauri后端依赖配置

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/crates/fastzip-gui/Cargo.toml
+++ b/crates/fastzip-gui/Cargo.toml
@@ -10,6 +10,9 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 leptos = { version = "0.6", features = ["csr"] }
-tauri = { version = "2" }
 console_error_panic_hook = "0.1"
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+serde = { version = "1", features = ["derive"] }
+serde-wasm-bindgen = "0.6"
+web-sys = { version = "0.3", features = ["Event", "HtmlInputElement", "EventTarget"] }
