--- a/crates/fastzip-gui/src-tauri/Cargo.toml
+++ b/crates/fastzip-gui/src-tauri/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = "2"
+tauri = { version = "2", features = [] }
 fastzip-core = { path = "../../fastzip-core" }
 rfd = "0.15"
